# Frekvens

./: .clang-format  .clang-tidy  .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  library.json  platformio.ini  pyproject.toml  ruff.toml
.github/: README.md  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  task.yml
.github/PULL_REQUEST_TEMPLATE/: dependencies.md  dependency_update.md  pull_request_template.md
.github/scripts/: dependencies.py  pinning.py  version.py
.github/scripts/platformio/: GitHubCommit.py  PlatformIoRegistry.py  requirements.txt
.github/workflows/: art-net.yml  biome.yml  build.yml  clang.yml  dependabot-pio.yml  dependabot.yml  distributed-display-protocol.yml  e131.yml  end-of-life.yml  esphome.yml  generate.yml  ikea-frekvens-led-multi-use-light.yml  ikea-frekvens-led-spotlight.yml  ikea-obegransad-led-wall-lamp.yml  labeler.yml  lint.yml  miscellaneous.yml  platformio.yml  pre-commit.yml  ruff.yml  stale.yml  stream.yml  tests.yml  version.yml  wiki.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md
docs/wiki/: Custom-devices.md  Custom.md  Development.md  Extensions.md  Fonts.md  Frekvens.md  IKEA-Frekvens.md  IKEA-Obegransad.md  Infrared-receiver.md  Infrared.md  Microphone.md  Modes.md  Obegransad.md  Photocell.md  README.md  RTC.md  Real-Time-Clock.md  Services.md  Status-Led.md  Weather.md  _Footer.md  _Sidebar.md
extra/: README.md
extra/ESPHome/: README.md
extra/ESPHome/IKEA-Frekvens-LED-spotlight/: README.md  esphome.yaml
extra/IKEA-Frekvens-LED-spotlight/: README.md  esphome.yaml
extra/Python/: FontGenerator.py  ModeGenerator.py  README.md  artnetTemplate.py  csvModeGenerator.py  ddpTemplate.py  e131Template.py  fontGenerator.py  requirements.txt
firmware/: README.md
firmware/include/config/: IkeaFrekvens.h  IkeaObegransad.h  constants.h  deprecated.h  extensions.h  fonts.h  frekvens.h  global.h  ikeaFrekvens.h  ikeaObegransad.h  infrared.h  microphone.h  modes.h  obegransad.h  photocell.h  rtc.h  sct2024.h  secrets.h  services.h  version.h
firmware/include/extensions/: AlexaExtension.h  BuildExtension.h  ButtonExtension.h  HeapExtension.h  HomeAssistantExtension.h  InfraredExtension.h  MessageExtension.h  MicrophoneExtension.h  MqttExtension.h  OtaExtension.h  PhotocellExtension.h  PlaylistExtension.h  RestfulExtension.h  RtcExtension.h  ScreenshotExtension.h  ServerSentEventsExtension.h  SignalExtension.h  StatusLedExtension.h  WebAppExtension.h  WebSocketExtension.h
firmware/include/fonts/: BrailleFont.h  LargeFont.h  MediumBoldFont.h  MediumFont.h  MediumFont2.h  MediumRegularFont.h  MediumWideFont.h  MicroFont.h  MiniFont.h  SmallFont.h
firmware/include/handlers/: BitmapHandler.h  BitmapHandler.tpp  ClockHandler.h  TextHandler.h  WeatherHandler.h
firmware/include/middlewares/: GoogleWeatherMiddleware.h  HomeAssistantWeatherMiddleware.h  OpenMeteoMiddleware.h  OpenWeatherMiddleware.h  TomorrowIoMiddleware.h  WorldWeatherOnlineMiddleware.h  WttrInMiddleware.h  YrMiddleware.h
firmware/include/modes/: AnimationMode.h  ArrowMode.h  ArtNetMode.h  BinaryClockMode.h  BinaryEpochMode.h  BlindsMode.h  BlinkMode.h  BoldClockMode.h  BreakoutClockMode.h  BrightMode.h  CircleMode.h  ClockMode.h  CountdownMode.h  DistributedDisplayProtocolMode.h  DrawMode.h  E131Mode.h  EqualizerMode.h  FireworkMode.h  FliesMode.h  GameOfLifeClockMode.h  GameOfLifeMode.h  GlitterMode.h  GoogleWeatherMode.h  HomeAssistantWeatherMode.h  HomeThermometerMode.h  JaggedWaveformMode.h  LargeClockMode.h  LargeTickingClockMode.h  LeafFallMode.h  LinesMode.h  MetaballsMode.h  NoiseMode.h  OpenMeteoMode.h  OpenMetroMode.h  OpenWeatherMode.h  PingPongClockMode.h  PingPongMode.h  PixelSequenceMode.h  RainMode.h  RingMode.h  (+15 more)
firmware/include/modules/: ExtensionModule.h  FontModule.h  FontModule.tpp  HandlerModule.h  ModeModule.h  ServiceModule.h
firmware/include/services/: ConnectivityService.h  DeviceService.h  DisplayService.h  ExtensionsService.h  FontsService.h  ModesService.h  (+2 more)
firmware/src/: main.cpp
partitions/: 16MB.csv  2MB_no_ota.csv  2MB_no_ota_rev2.csv  32MB.csv  4MB.csv  4MB_no_ota.csv  4MB_rev2.csv  8MB.csv  README.md
scripts/: Extra.py  Firmware.py  README.md  Scripts.py  WebApp.py  extra_script.py  preBuild.py  preUpload.py  requirements.txt
scripts/migration/: ElegantOTA.py  README.md  WiFiManager.py
scripts/src/: Extra.py  Firmware.py  Frekvens.py  Project.py  Tools.py
tools/: .env  README.md  csvAnimationSplitter.py  csvModeGenerator.py  csvStreamer.py  project.toml  pyproject.toml  requirements.txt
tools/scripts/: README.md  artnetTemplate.py  csvAnimationSplitter.py  csvModeGenerator.py  ddpTemplate.py  e131Template.py
tools/src/: Firmware.py  Tools.py  WebApp.py
tools/src/config/: Frekvens.py  constants.py  ikeaObegransad.py
tools/src/frekvens/: AnimationSplitter.py  ArtNetStreamer.py  DistributedDisplayProtocolStreamer.py  E131Streamer.py  HomeThermometerDemo.py  HomeThermometerUpdater.py  ModeSwitcher.py  StreamCsv.py
tools/src/modes/: Animation.py  ArtNet.py  DistributedDisplayProtocol.py  E131.py
tools/src/services/: Connectivity.py  Network.py
webapp/: .env  .env.development  README.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.mts
webapp/src/: index.tsx  style.css
(+235 files in other folders)
