[project]
name = "frekvens"
description = "Toolbox for the Frekvens project."
version = "2.3.3.dev0"
license = "MIT"
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.10"
dependencies = [
    'httpx==0.28.1',
]

[project.urls]
Homepage = "https://github.com/VIPnytt/Frekvens"
Documentation = "https://github.com/VIPnytt/Frekvens/wiki"

[project.optional-dependencies]
font = [
    "fonttools==4.62.1",
    "matplotlib==3.10.8",
    "pillow==12.2.0",
]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "tools/src",
]

[dependency-groups]
dependabot = [
    { include-group = "httpx" },
    { include-group = "packaging" },
]
dev = [
    { include-group = "nodejs" },
    { include-group = "ruff" },
]
httpx = [
    "httpx==0.28.1",
]
nodejs = [
    "nodejs-wheel==24.14.1",
]
packaging = [
    "packaging==26.0",
]
platformio = [
    "platformio==6.1.19",
]
ruff = [
    "ruff==0.15.8",
]
scons = [
    "scons==4.10.1",
]
scripts = [
    { include-group = "httpx" },
    { include-group = "nodejs" },
    { include-group = "packaging" },
    "python-dotenv==1.2.2",
    "tzdata==2026.1",
    "tzlocal==5.3.1",
]
uv = [
    "uv==0.11.4",
]

[tool.ruff]
extend-exclude = [
    ".pio",
]
line-length = 120
