[project]
name = "frekvens"
description = "Toolbox for the Frekvens project."
version = "2.0.0-dev0"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    'httpx==0.28.1',
]

[project.optional-dependencies]
extra-fonts = [
    'fonttools==4.60.1',
    'matplotlib==3.10.7',
    'pillow==11.3.0',
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/VIPnytt/Frekvens"
"Wiki" = "https://github.com/VIPnytt/Frekvens/wiki"
"Bug Reports" = "https://github.com/VIPnytt/Frekvens/issues"
