[project]
name = "frekvens"
description = "Toolbox for the Frekvens project."
version = "2.0.1.dev0"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    'httpx==0.28.1',
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/VIPnytt/Frekvens"
"Wiki" = "https://github.com/VIPnytt/Frekvens/wiki"
"Bug Reports" = "https://github.com/VIPnytt/Frekvens/issues"
