[project]
name = "frekvens"
description = "Toolbox for the Frekvens project."
version = "2.2.1.dev0"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    'httpx==0.28.1',
]

[project.urls]
"Homepage" = "https://github.com/VIPnytt/Frekvens"
"Wiki" = "https://github.com/VIPnytt/Frekvens/wiki"
"Bug Reports" = "https://github.com/VIPnytt/Frekvens/issues"

[tool.setuptools.packages.find]
where = ["src"]
